welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:11: error: not found: value end
        end
        ^